# File-Based-ITQ

./: README.md
sources/: CMakeLists.txt
sources/include/: lshbox.h
sources/include/lshbox/: basis.h  config.h  eval.h  filedb.h  matrix.h  metric.h  topk.h
sources/include/lshbox/lsh/: itqlsh.h
sources/python/: CMakeLists.txt  pyitq.cpp
sources/python/win/x64/: pyitq.pyd  test_pyitq.py
sources/tools/: CMakeLists.txt  create_benchmark.cpp  create_benchmark_filedb.cpp  dbitq_loads.cpp  dbitq_save.cpp  itqlsh_test.cpp
test/: mat2binary.m
